Fix (Filter): Fix styles on mobile devices

--- a/app/(Main Page)/Filter/FilterModal.module.css
+++ b/app/(Main Page)/Filter/FilterModal.module.css
@@ -12,15 +12,19 @@
 }
 
 .filterModal {
+  overflow-y: auto;
   background-color: white;
   z-index: 999;
   display: flex;
   flex-direction: column;
-  margin: 2rem;
+  justify-content: space-between;
+  margin: 1rem;
   border-radius: 20px;
   padding: 2rem;
   gap: 2rem;
   flex: 1;
+  max-height: 80vh;
+  height: 100%;
 }
 
 .filterModalHeader {
@@ -108,7 +112,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  gap: .5rem;
+  gap: 0.5rem;
 }
 
 .filterModalType label input[type="checkbox"] + span {
