--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,3 @@
-
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -24,7 +23,7 @@ html {
 
 body {
   margin: 0;
-  background: rgba(72, 189, 228, 0.30);
+  background: rgba(72, 189, 228, 0.3);
 }
 
 /**
@@ -99,7 +98,6 @@ a:hover {
   transform: translateX(2%);
   color: rgb(171, 171, 226);
 }
-
 
 /**
  * 1. Remove the bottom border in Chrome 57-
@@ -198,7 +196,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -208,7 +207,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
@@ -370,4 +370,15 @@ template {
 
 [hidden] {
   display: none;
+}
+
+@media (min-width: 900px) {
+
+  body {
+    overflow-y: auto !important;
+  }
+
+  #navbar{
+    display: block !important;
+  }
 }
